--- a/work.html
+++ b/work.html
@@ -306,7 +306,7 @@
                                 </a>
                             </figure>
 
-                            <p class="btn btn-link"><a href="https://satake423.github.io/Myportfolio/">SiteLink</a></p>
+                            <p class="btn btn-link"><a href="https://satake423.github.io/nekoniwa.github.io" target="_blank">SiteLink</a></p>
                         </div>
                     </div>
 <!-------------------------------- practice ------------------------------------>
