--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 
                                 <p class="btn btn-link"><a href="https://satake423.github.io/nekoniwa.github.io" target="_blank">SiteLink</a></p>
                             </div>
+                            <div class="btn-more"><a href="work.html#lp" target="_blank">MORE</a></div>
                         </div>
 <!-------------------------------- practice------------------------------------>
                         <div class="work-box practice">
