--- a/top.html
+++ b/top.html
@@ -95,7 +95,7 @@
                                     </a>
                                 </figure>
                             </div>
-                            <div class="btn-more"><a href="work.html#banner" target="_blank">MORE</a></div>
+                            <div class="btn-more"><a href="work.html" target="_blank">MORE</a></div>
                         </div>
 <!-------------------------------- flyer------------------------------------>
                         <div class="work-box flyer">
@@ -195,6 +195,7 @@
 
                                 <p class="btn btn-link"><a href="https://satake423.github.io/nekoniwa.github.io" target="_blank">SiteLink</a></p>
                             </div>
+                            <div class="btn-more"><a href="work.html#lp" target="_blank">MORE</a></div>
                         </div>
 <!-------------------------------- practice------------------------------------>
                         <div class="work-box practice">
