--- a/work.html
+++ b/work.html
@@ -301,6 +301,7 @@
                                             <br>イラストはillustratorで自作。
                                             <br>竹や流れる雲で和風を表現。
                                             <br>練習したものを含めると数が多いので、実際に作るときは、作品を厳選するべきだと思う。
+                                            <br>近日中にレスポンシブ対応させたい。
                                         </p>
                                     </div>
                                 </a>
